--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "element-plus": "^2.8.6",
+    "highlight.js": "^11.10.0",
+    "marked": "^14.1.3",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
@@ -30,6 +32,7 @@
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.29.0",
     "less": "^4.2.0",
+    "marked-highlight": "^2.2.0",
     "npm-run-all2": "^6.2.3",
     "prettier": "^3.3.3",
     "typescript": "~5.5.4",
